--- a/src/frontend/cadastro.html
+++ b/src/frontend/cadastro.html
@@ -12,7 +12,7 @@
   <body>
 
     <!-- Navbar -->
-    <header>
+    <!-- <header>
       <nav>
           <img id="fotoLogo" src="../imgs/MRVisão.png" onclick="voltarHome()">
           <div class="menuNavbarGrande">
@@ -41,7 +41,7 @@
       </div>
 
   
-  </header>
+  </header> -->
 
 
     <div class="container">
