url especifica do kanban

--- a/src/frontend/adminServicos.html
+++ b/src/frontend/adminServicos.html
@@ -54,7 +54,8 @@
                 <tr>
                     <th scope="col">Número</th>
                     <th scope="col">Tipo</th>
-                    <th scope="col">Empreiteiro</th>
+                    <th scope="col">Descrição</th>
+                    <th scope="col">Kanban</th>
                     <th scope="col">Editar</th>
                     <th scope="col" id="elemento1">Cancelar</th>
                     <th scope="col" id="elemento2">Concluir</th>
