--- a/src/frontend/cadastro.html
+++ b/src/frontend/cadastro.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/pageCadastro.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <script src=""></script>
   </head>
   <body>
@@ -45,8 +46,11 @@
 
 
     <div class="container">
+      <button class="btnSair" onclick="sairDoCadastro()"> 
+        <span class="material-icons">close</span>
+    </button>
       <header>Cadastro</header>
-      <button class="btnCancelar">Pagina Inicial</button>
+
       <!-- Aqui está a barra de progresso -->
       <div class="progress-bar">
         <!-- Aqui está a primeira etapa, empreiteira -->
