--- a/src/frontend/kanban.html
+++ b/src/frontend/kanban.html
@@ -13,14 +13,14 @@
     <!-- <h2>Obra: </h2><br>
     <h3>Serviço: </h3> -->
     <div class="kanban">
-        <div class="kanban__column">
+        <!-- <div class="kanban__column">
             <div class="kanban__column-title">Teste</div>
             <div class="kanban__items">
                 <div contenteditable class="kanban__item-input"></div>
                 <div class="kanban__dropzone"></div>
             </div>
             <button class="kanban__add-item" type="button">+ Add</button>
-        </div>
+        </div> -->
     </div>
     <script src="js/main.js" type="module"></script>
 </body>
