Botoes Filtrar Alterados

--- a/src/frontend/obras.html
+++ b/src/frontend/obras.html
@@ -83,7 +83,7 @@
         </select>
 
         <!-- Botão de filtrar -->
-        <button onclick="filtroRegional()">Filtrar</button>
+        <button class="botao" onclick="filtroRegional()">Filtrar</button>
     </div>
 
     <!-- Div das obras, que será atualizada pelo script -->
