--- a/src/frontend/homeAdmin.html
+++ b/src/frontend/homeAdmin.html
@@ -45,6 +45,7 @@
                 <a class="item3DropDown" href="comoFunciona.html">Como Funciona</a>
                 <a class="item4DropDown" href="cadastro.html">Registrar-se</a>
                 <a class="item5DropDown" href="login.html">Login</a>
+                <a class="item6DropDown" href="login.html">Login</a>
             </div>
             
             <div class="modal" id="modalLogout" tab-index="-1" aria-labelledby="tituloDoModal" aria-hidden="true">
