--- a/src/frontend/wpp.html
+++ b/src/frontend/wpp.html
@@ -40,6 +40,7 @@
             <a class="item3DropDown" href="comoFunciona.html">Como Funciona</a>
             <a class="item4DropDown" href="cadastro.html">Registrar-se</a>
             <a class="item5DropDown" href="login.html">Login</a>
+            <a class="item6DropDown" href="login.html">Login</a>
         </div>
 
 
