--- a/src/frontend/cadastro.html
+++ b/src/frontend/cadastro.html
@@ -155,7 +155,7 @@
             </div>
             <div class="field btns">
               
-              <button type="button" onclick="verificar3Etapa() "class="submit">Enviar</button>
+              <button type="submit" onclick="verificar3Etapa() "class="submit">Enviar</button>
             </div>
           </div>
         </form>
