--- a/src/frontend/comoFunciona.html
+++ b/src/frontend/comoFunciona.html
@@ -98,7 +98,7 @@
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    Após filtrar os serviços que melhor atendam o seu perfil, se candidate a vaga de seu interesse
+                    Após filtrar os serviços que melhor atendam o seu perfil, se candidate a vaga de seu interesse.
                 </div>
               </div>
             </div>
