--- a/src/frontend/homeAdmin.html
+++ b/src/frontend/homeAdmin.html
@@ -134,7 +134,7 @@
     </div>
 
     <script src="../backend/homeAdmin.js"></script>
-    <script src="../frontend/js/joao.js"></script>
+    <script src="js/joao.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
