--- a/src/frontend/kanban.html
+++ b/src/frontend/kanban.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kanban Board</title>
+    <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/main.css">
+    <title>Kanban Board</title>
 </head>
 
-<body>
+<body onload="pegaCandidaturas()">
     <!-- <h2>Obra: </h2><br>
     <h3>Serviço: </h3> -->
     <div class="kanban">
@@ -22,7 +23,6 @@
             <button class="kanban__add-item" type="button">+ Add</button>
         </div> -->
     </div>
-    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
