logo volta pro home

--- a/src/frontend/home.html
+++ b/src/frontend/home.html
@@ -19,7 +19,7 @@
           <nav>
             
             <!-- Logo Navbar que tambem volta pra home ao clicar -->
-              <img id="fotoLogo" src="../imgs/MRVisão.png" onclick="verificarCoockies()">
+              <img id="fotoLogo" src="../imgs/MRVisão.png" onclick="voltarHome()">
               
               <!-- Navbar em modo do cheio(Computador, Tablet) -->
               <div class="menuNavbarGrande">
