Revisão para entrega final

--- a/src/frontend/wpp.html
+++ b/src/frontend/wpp.html
@@ -50,6 +50,7 @@
         <a>Fale Conosco no WhatsApp!</a>
     </div>
 
+    <!-- OPTION COM TODOS OS ESTADOS COM WHATSAPP DE REPRESENTANTES DA MRV -->
     <div class="titulo">
         <a>Selecione seu Estado!</a>
         <select id="filtro" onchange="aparecer()">
